crates/edgedb_codegen/tests/compile/macros/incorrect_args.stderr
error: expected string literal
 --> tests/compile/macros/incorrect_args.rs:4:32
  |
4 |     edgedb_query!(example_module, invalid);
  |                                   ^^^^^^^
